# autodocgen

./: .env  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTING_REPORT.md  pyproject.toml  verify_llm.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
autodocgen/: __init__.py  cli.py  config.py  generator.py  parser.py  scanner.py  writer.py
autodocgen/templates/: index.md.j2  module.md.j2
tests/: test_config.py  test_forensic.py  test_generator.py  test_integration.py  test_large_project.py  test_parser.py  test_scanner.py  test_writer.py
