[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodocgen"
version = "0.1.0"
description = "AI-powered CLI tool that generates Markdown documentation from Python docstrings and code structure"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "Nitika Saraogi"}]
keywords = ["documentation", "ai", "cli", "generator", "openai", "devtools", "docstrings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/shifulegend/autochamp-autodocgen-1"
Repository = "https://github.com/shifulegend/autochamp-autodocgen-1"
"Bug Tracker" = "https://github.com/shifulegend/autochamp-autodocgen-1/issues"

[project.scripts]
autodocgen = "autodocgen.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
